# BAB

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  bank_analysis_backend.pyproj  bank_analysis_backend.sln  class_index.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.truenas.yml  docker-compose.yml  dockerfile  filter-secrets.sh  function_index.html  index.html  mkdocs.yml  pyproject.toml  pytest-report.html  replacements.txt  status.json  truenas.env.example  update.sh  z_5f5a17c013354698_main_py.html  z_6549c0330f733809___init___py.html  z_6549c0330f733809_data_plot_py.html  z_6549c0330f733809_login_py.html  z_6549c0330f733809_netbank_credentials_py.html  z_7ed45afdb7671d83_Config_py.html  z_7ed45afdb7671d83_DataDescriptor_py.html  z_7ed45afdb7671d83_DatabaseHandler_py.html  z_7ed45afdb7671d83_FirestoreService_py.html  z_7ed45afdb7671d83_QueryHandler_py.html  z_7ed45afdb7671d83_Query_py.html  z_7ed45afdb7671d83_User_py.html  z_7ed45afdb7671d83_Utils_py.html  (+15 more)
.github/: SYSTEM.md  TODO.md  copilot-instructions.md  copilot-setup-steps.yml
.github/agents/: AGENT_ROUTING_GUIDE.md  api-surface.agent.md  backend-implementer.agent.md  backend-reliability-refactor-agent.md  documentation-writer.agent.md  my-agent.agent.md  platform-infrastructure.agent.md  product-owner.agent.md  qa-engineer.agent.md  scrum-master.agent.md  security-engineer.agent.md  tech-lead.agent.md  tester.agent.md
.github/contracts/: delegation_contract.md  memory_contract.md  state_contract.md  task_contract.md
.github/instructions/: api.instructions.md  architecture.instructions.md  docs.instructions.md  firebase.instructions.md  ops.instructions.md  services.instructions.md  testing.instructions.md  verification_rules.instructions.md
.github/memory/: CICD_REFACTOR_SUMMARY.md  CI_CD_IMPROVEMENTS.md  RELEASE_PLAN.md  TASK.md  TODO.md  active-context.md  agent-activity.md  bab_coverage_analysis.md  bab_security_audit.md  lessons.md  plan.md  security-policy.md  security_exploration_findings.md  session-release-review.md  session-state.json
.github/prompts/: README.md  bug-fix.prompt.md  contract-sync.prompt.md  new-router.prompt.md  new-service.prompt.md  runtime-integration.prompt.md  schema-migration.prompt.md
.github/skills/: README.md
.github/workflows/: ci.yml  docker-build-push.yml  docker.yml  pages.yml  release.yml
app/: ersterepgen-ebd117266a99.json  login.py  main.py  pyproject.toml
app/api/: main.py
app/core/: auth.py  config.py  error_mapping.py  exceptions.py  firebase_init.py  health.py  logging_config.py  rate_limit.py
app/routers/: data_plot.py  login.py  netbank_credentials.py
app/schemas/: data.py  login.py  netbank.py
app/services/: data_service.py  login_service.py  scheduler.py  user_deletion_service.py
bab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.truenas.yml  docker-compose.yml  entrypoint.sh
docs/: api.md  architecture.md  ci.md  deployment.md  github-pages.md  index.md  security.md  setup.md  testing.md  troubleshooting.md
scripts/: dev.sh  format.sh  generate-security-reports.py  lint.sh
tests/: conftest.py  test_auth.py  test_collection.py  test_credentials.py  test_credentials_coverage.py  test_credentials_extended.py  test_data_descriptor.py  test_data_plot.py  test_data_plot_router.py  test_data_service.py  test_data_service_extended.py  test_database_handler.py  test_database_handler_extended.py  test_database_handler_final.py  test_error_mapping.py  test_exceptions.py  test_final_coverage.py  test_final_gaps.py  test_firebase_init.py  test_firestore_service.py  test_health.py  test_logging_config.py  test_login_firebase_coverage.py  test_login_router.py  test_login_service.py  test_login_service_extended.py  test_main.py  test_main_startup.py  test_miscellaneous_coverage.py  test_netbank_router.py  test_query.py  test_query_handler.py  test_query_handler_coverage.py  test_query_handler_extended.py  test_remaining_coverage.py  test_scheduler.py  test_scheduler_coverage.py  test_scheduler_extended.py  test_scheduler_worker.py  test_token_registry.py  (+5 more)
tests/api/: test_data_plot.py  test_main.py
tests/functionaltest/: conftest.py  test_cors.py  test_data_plot.py  test_data_plot_router.py  test_feature_enhancements.py  test_login_router.py  test_main.py  (+3 more)
(+64 files in other folders)
