[project]
name = "backend"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.12",
	"fastapi-cli[standard]>=0.0.7",
    "firestore>=0.0.8",
    "jwcrypto>=1.5.6",
    "pycryptodome>=3.22.0",
    "python-jwt>=4.1.0",
    "sseclient>=0.0.27",
    "uvicorn[standard]>=0.34.2",
	"requests>=2.31.0",
	"selenium>=4.9.0",
	"pandas>=2.2.0",
	"openpyxl>=3.1.0",
	"xlrd>=2.0.1",
]
