[project]
name = "bab"
version = "0.10.4"
description = "Creates backend to run on TrueNAS to collect data user level with a set interval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.115.12",
    "fastapi-cli[standard]>=0.0.7",
    "firestore>=0.0.8",
    "jwcrypto>=1.5.6",
    "pyasn1>=0.6.3",
    "pycryptodome>=3.22.0",
    "PyJWT>=2.12.0",
    "protobuf>=5.29.6",
    "python-multipart>=0.0.22",
    "requests>=2.32.4",
    "selenium>=4.9.0",
    "sseclient>=0.0.27",
    "starlette>=0.49.1",
    "uvicorn[standard]>=0.34.2",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "firebase-admin>=7.1.0",
    "parquet>=1.3.1",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=8.0.0",
    "mypy>=1.15.0",
    "pip-audit>=2.8.0",
    "pre-commit>=4.5.1",
    "pyproject-flake8>=0.0.1a3",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "ruff>=0.9.10",
    "types-requests>=2.32.0",
    "pandas-stubs>=2.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "tests*"]
exclude = ["docker*"]

[tool.black]
line-length = 88
include = '\.py$'
extend-exclude = '''
^/(
  \.eggs

  | \.git
  | \.hg
  | \.mypy_cache

  | \.tox
  | \.venv
  | _build

  | buck-out
  | build
  | dist
  | \.__pycache__
  | \.md
)/
'''

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "tests"]
extend-exclude = [
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "htmlcov",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E203", "E501", "E402", "B008", "B904", "B006", "B007"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E501, E402"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = "typings"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
